# voxel-engine

./: .gitignore  CMakeLists.txt  TODO.md
glad/include/glad/: glad.h
glad/src/: glad.c
include/: camera.h  core.h  input.h  render_batch.h  shader.h  voxel.h
res/shaders/: fragment.glsl  vertex.glsl
src/: camera.c  core.c  input.c  main.c  render_batch.c  shader.c  voxel.c
